增加系统日志

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,11 +32,15 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: false
 
+#log
+
 #showSql
 logging:
   level:
     com:
-      example:
-        mapper : debug
+      shao:
+        wacky:
+          mapper : debug
+  config: classpath:logback.xml
 
 
