--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <docker.image.prefix>wacky</docker.image.prefix>
+        <project.build.directory>target</project.build.directory>
+        <project.build.finalName>wacky</project.build.finalName>
     </properties>
 
     <dependencies>
@@ -83,6 +86,24 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!-- Docker maven plugin -->
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}-${project.version}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
+            </plugin>
+            <!-- Docker maven plugin -->
         </plugins>
     </build>
 
