--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,10 +4,11 @@ server:
 
 spring:
   datasource:
-    username: shao
-    password: 123456
-    url: jdbc:mysql://localhost:3306/shao?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: root
+    url: jdbc:mysql://localhost:3306/shao?useUnicode=true&characterEncoding=utf8&useSSL=false
+    driver-class-name:  com.mysql.cj.jdbc.Driver
+    # com.mysql.jdbc.Driver
 
 mybatis:
   mapper-locations: classpath:mappers/*Mapper.xml
