--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ spring:
     password: root
     url: jdbc:mysql://localhost:3306/shao?useUnicode=true&characterEncoding=utf8&useSSL=false
     driver-class-name:  com.mysql.cj.jdbc.Driver
-    # com.mysql.jdbc.Driver
+    # com.mysql.jdbc.Driver 驱动对应 mysql 版本 而修改
 
 mybatis:
   mapper-locations: classpath:mappers/*Mapper.xml
